# prist

./: .gitignore  Cargo.toml  README.md  prist-spec-construccion.md  prist.exe-x86_64-pc-windows-msvc.tar.gz.sha256  prist.exe-x86_64-pc-windows-msvc.zip.sha256
.github/workflows/: build-windows.yml  ci.yml  release.yml
scripts/: benchmark_prist_vs_puro.ps1  install.ps1  install.sh  uninstall.ps1
src/: cli.rs  commands.rs  config.rs  engine.rs  error.rs  fs_util.rs  git_ops.rs  ide.rs  lib.rs  main.rs  paths.rs  releases.rs
staging/: install.ps1
